update heights and tweak button texts

--- a/stream/index.html
+++ b/stream/index.html
@@ -335,8 +335,8 @@
 	  <div id="id02" class="w3-modal">
 	    <div class="w3-modal-content">
 	      <div class="w3-container">
-		    <span id="start-scrolling-button2" style="display:none" onclick="ChantAutoScroll.controls.userHitStart()" class="w3-button w3-display-topright pause-button">(scroll)</span>
-		  	<span id="stop-scrolling-button2" style="display:none" onclick="ChantAutoScroll.controls.userHitPause()" class="w3-button w3-display-topright pause-button">(stop)</span>
+		    <span id="start-scrolling-button2" style="display:none" onclick="ChantAutoScroll.controls.userHitStart()" class="w3-button w3-display-topright pause-button">[scroll]</span>
+		  	<span id="stop-scrolling-button2" style="display:none" onclick="ChantAutoScroll.controls.userHitPause()" class="w3-button w3-display-topright pause-button">[stop]</span>
 			  &nbsp;&nbsp;
 	        <span onclick="closeChantModalClicked(2)" class="close-button w3-button w3-display-topright">&times;</span>
 	        <div class="main-content">	        
@@ -360,8 +360,8 @@
 	  <div id="id01" class="w3-modal">
 	    <div class="w3-modal-content">
 	      <div class="w3-container">
-			  <span id="start-scrolling-button1" style="display:none" onclick="ChantAutoScroll.controls.userHitStart()" class="w3-button w3-display-topright pause-button">(scroll)</span>
-			  <span id="stop-scrolling-button1" style="display:none" onclick="ChantAutoScroll.controls.userHitPause()" class="w3-button w3-display-topright pause-button">(pause)</span>
+			  <span id="start-scrolling-button1" style="display:none" onclick="ChantAutoScroll.controls.userHitStart()" class="w3-button w3-display-topright pause-button">[scroll]</span>
+			  <span id="stop-scrolling-button1" style="display:none" onclick="ChantAutoScroll.controls.userHitPause()" class="w3-button w3-display-topright pause-button">[pause]</span>
 			  &nbsp;&nbsp;
 	        <span onclick="closeChantModalClicked(1)" class="close-button w3-button w3-display-topright">&times;</span>
 	        <div class="main-content">
