--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 </head>
 
 <body id=body onload="loadChantStuff();">
+<div id="banner">
+	<h1><a href="/">Pujas.live</a></h1>
+	<p>
+		<a href="/">Home</a>
+		<a href="/chanting/">Chanting Books</a>
+	</p>
+</div>
 <div id="buttons">
 	<!-- buttons -->
 	<div>
