--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
 
 
 	<style>
-		/*
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-        }
-        #main { height:100%; display:flex; align-items: center; justify-content: center; }*/
 		#buttons { padding: 50px; }
 		#open-book-1, #open-book-2 { font-size: 32pt }
 	</style>
@@ -46,13 +38,13 @@
 </head>
 
 <body id=body onload="loadChantStuff();">
-<div id="banner">
+<!-- temporarily remove for retreat <div id="banner">
 	<h1><a href="/">Pujas.live</a></h1>
 	<p>
 		<a href="/">Home</a>
 		<a href="/chanting/">Chanting Books</a>
 	</p>
-</div>
+</div>-->
 <div id="buttons">
 	<!-- buttons -->
 	<div>
