Add help link/video

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 	<style>
 		#buttons { padding: 50px; }
 		#open-book-1, #open-book-2 { font-size: 32pt }
+		.footer {
+			position: fixed;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			color: white;
+			padding: 20px;
+		}
 	</style>
 
 	<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
@@ -56,6 +64,9 @@
 </div>
 <div id="main" class="w3-container">
 	<!-- modals will get appended here -->
+</div>
+<div class="footer">
+	<a href="https://youtu.be/kmVEoCaQHHs" target="_blank">Help/How to Use</a>
 </div>
 </body>
 </html>
