Add plausible tracking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-
 	<style>
 		#buttons { padding: 50px; }
 		#open-book-1, #open-book-2 { font-size: 32pt }
@@ -40,8 +39,9 @@
 
 	</script>
 
-	<title>Scrolling Chant Books</title>
+	<script async defer data-domain="pujas.live" src="https://plausible.pujas.live/js/plausible.js"></script>
 
+	<title>Scrolling Chant Books</title>
 
 </head>
 
