Sync plausible script

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 	<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 
+	<script data-domain="pujas.live" src="https://plausible.pujas.live/js/plausible.js"></script>
+
 	<script src="autoscrollchant.js"></script>
 	<script src="chantingBook.js"></script>
 	<script src="pageDataBook1.js"></script>
@@ -38,8 +40,6 @@
 		}
 
 	</script>
-
-	<script async defer data-domain="pujas.live" src="https://plausible.pujas.live/js/plausible.js"></script>
 
 	<title>Scrolling Chant Books</title>
 
