Ignore plausible for iframe.html

--- a/iframe.html
+++ b/iframe.html
@@ -29,6 +29,8 @@
     <script src="pageDataBook2.js"></script>
     <script>
 
+      window.plausible = function() {};
+
       function loadChantStuff() {
         //only load one page specifically
         let data;
